# Poetry-Multi-Venv

./: .gitignore  README.md  guide.md  pyproject.toml  run.sh  setup.sh
common/: pyproject.toml
common/common/: __init__.py  containers.py  models.py  utils.py
output/: pytorch_MNIST_CNN_20250313_101434.json  tensorflow_MNIST_CNN_20250313_101437.json
pytorch_env/: pyproject.toml  pytorch_test.py  requirements.txt
pytorch_env/pytorch_service/: __init__.py  containers.py  main.py  models.py  services.py
report_env/: pyproject.toml  requirements.txt
report_env/report_service/: __init__.py  containers.py  main.py  services.py
report_env/reports/: report_20250313_101438.md
tensorflow_env/: pyproject.toml  requirements-lock.txt  requirements.txt
tensorflow_env/tensorflow_service/: __init__.py  containers.py  main.py  models.py  services.py
tensorflow_env/test/: tensorflow_test.py
