[tool.poetry]
name = "common"
version = "0.1.0"
description = "공통 모듈"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "common"}]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 