[tool.poetry]
name = "pytorch-env"
version = "0.1.0"
description = "PyTorch environment"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
numpy = "^2.2.3"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 