[tool.poetry]
name = "report-service"
version = "0.1.0"
description = "추론 결과 보고서 생성 서비스"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "report_service"}]

[tool.poetry.dependencies]
python = "^3.10"
# 패키지는 requirements.txt에서 관리됩니다
dependency-injector = "^4.46.0"
pydantic = "^2.10.6"
markdown = "^3.7"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 