[tool.poetry]
name = "tensorflow-env"
version = "0.1.0"
description = "TensorFlow environment"
authors = ["Seong Yeonchan <ycseong07@haii.io>"]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.18.0"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 